--- a/data/sources/protest-cz.yaml
+++ b/data/sources/protest-cz.yaml
@@ -6,8 +6,10 @@ series:
     image: https://secure.meetupstatic.com/photos/event/4/b/c/0/600_491719392.jpeg
   events:
   - meetupcom:
-      meta_description: 'Sun, Sep 5, 2021, 3:00 PM: Tentokrát bude setkání osobně, těšíme se na Vás!Nachystali jsme si pro Vás dvě přednášky od Petra Fifky a Marcela Veselky. Stanete se také součástí natáčení podcastu Kvalitn'
-      og_title: 102. [pro:]TEST! - Testovací odpoledne s Kvalitním Kafem
+      meta_description: 'Sun, Sep 5, 1:00 PM: Tentokrát bude setkání osobně, těšíme se na Vás!
+
+        Nachystali jsme si pro Vás dvě přednášky od Petra Fifky a Marcela Veselky. Stanete se také součástí natáčení podcastu Kvali'
+      og_title: 102. [pro:]TEST! - Testovací odpoledne s Kvalitním Kafem | Meetup
       image: https://secure.meetupstatic.com/photos/event/d/7/b/e/600_498415230.jpeg
       url: https://www.meetup.com/protest_cz/events/280210840/
       ical:
@@ -30,8 +32,10 @@ series:
         dtstart: 2021-09-05 15:00:00+02:00
         dtend: 2021-09-05 18:15:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jul 27, 2021, 6:00 PM: Anotace přednáškyZuzana nás nebude učit dělat penetrační testy a další pokročilé úlohy z kybernetické bezpečnosti, ale bude nám vyprávět o tom, čeho si můžeme při normálním'
-      og_title: 101. [pro:]TEST! - Testujeme okem informační bezpečnosti se Zuzanou Pechovou
+      meta_description: 'Tue, Jul 27, 4:00 PM: Anotace přednášky
+
+        Zuzana nás nebude učit dělat penetrační testy a další pokročilé úlohy z kybernetické bezpečnosti, ale bude nám vyprávět o tom, čeho si můžeme při normální'
+      og_title: 101. [pro:]TEST! - Testujeme okem informační bezpečnosti se Zuzanou Pechovou | Meetup
       image: https://secure.meetupstatic.com/photos/event/5/b/9/9/600_497663449.jpeg
       url: https://www.meetup.com/protest_cz/events/279598290/
       ical:
@@ -105,8 +109,16 @@ series:
         dtstart: 2021-06-08 18:00:00+02:00
         dtend: 2021-06-08 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Oct 26, 2021, 6:00 PM: Anotace Přednášky“Předpoklad místo důkazu, aneb pohled DevOpsáka na testování skrze celý software delivery chain.”Pár slov o speakeroviV současnosti působí jako E-commerce '
-      og_title: 103. [pro:]TEST! Martin Hrášek✨ expect(true).toBeTruthy()
+      meta_description: 'Tue, Oct 26, 4:00 PM: Anotace Přednášky
+
+
+        “Předpoklad místo důkazu, aneb pohled DevOpsáka na testování skrze celý software delivery chain.”
+
+
+        Pár slov o speakerovi
+
+        V současnosti působí jako E-comm'
+      og_title: 103. [pro:]TEST! Martin Hrášek✨ expect(true).toBeTruthy() | Meetup
       image: https://secure.meetupstatic.com/photos/event/4/8/2/a/600_499638474.jpeg
       url: https://www.meetup.com/protest_cz/events/281566536/
       ical:
@@ -129,8 +141,10 @@ series:
         dtstart: 2021-10-26 18:00:00+02:00
         dtend: 2021-10-26 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Nov 30, 2021, 6:00 PM: AnnotationPuppeteer is a node library that provides high-level API to control chrome and chromium. Puppeteer can also be used for browser automation as it has all capabilit'
-      og_title: 104. [pro:]TEST! – Vivek Shringi about Puppeteer
+      meta_description: 'Tue, Nov 30, 5:00 PM: Annotation
+
+        Puppeteer is a node library that provides high-level API to control chrome and chromium. Puppeteer can also be used for browser automation as it has all capabili'
+      og_title: 104. [pro:]TEST! – Vivek Shringi about Puppeteer | Meetup
       image: https://secure.meetupstatic.com/photos/event/b/b/0/e/600_500267886.jpeg
       url: https://www.meetup.com/protest_cz/events/282124529/
       ical:
