data: cron update

--- a/data/sources/agilni-cafe-praha.yaml
+++ b/data/sources/agilni-cafe-praha.yaml
@@ -21,7 +21,7 @@ series:
 
 
           https://www.meetup.com/Agilni-Open-Cafe-Praha/events/280683798/'
-        location: Dejvická Theater Cafe (Zelená 1084/15, Praha 6-Dejvice, Czech Republic 160 00)
+        location: Dejvické Theater Cafe (Zelená 1084/15, Praha 6-Dejvice, Czech Republic 160 00)
         geo:
           lat: 50.08
           lon: 14.43
@@ -73,7 +73,7 @@ series:
 
 
           https://www.meetup.com/Agilni-Open-Cafe-Praha/events/280441638/'
-        location: Dejvická Theater Cafe (Zelená 1084/15, Praha 6-Dejvice, Czech Republic 160 00)
+        location: Dejvické Theater Cafe (Zelená 1084/15, Praha 6-Dejvice, Czech Republic 160 00)
         geo:
           lat: 50.08
           lon: 14.43
