--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -156,11 +156,8 @@ series:
         dtstart: 2021-10-13 18:00:00+02:00
         dtend: 2021-10-13 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Oct 26, 4:00 PM: Pokud přemýšlíš o změně kariéry a zajímá tě programování, připoj se k naší informační schůzce, kde se dozvíš všechno potřebné o rekvalifikaci do tohoto oboru.
-
-
-        Poznáš členy'
-      og_title: 'Online informační schůzka: Jak se rekvalifikovat na programátora? | Meetup'
+      meta_description: 'Tue, Oct 26, 2021, 6:00 PM: Pokud přemýšlíš o změně kariéry a zajímá tě programování, připoj se k naší informační schůzce, kde se dozvíš všechno potřebné o rekvalifikaci do tohoto oboru.Poznáš členy n'
+      og_title: 'Online informační schůzka: Jak se rekvalifikovat na programátora?'
       url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/281629117/
       ical:
         summary: 'Online informační schůzka: Jak se rekvalifikovat na programátora?'
@@ -184,8 +181,8 @@ series:
         dtend: 2021-10-26 20:00:00+02:00
       image: https://secure.meetupstatic.com/photos/event/6/c/9/e/600_499707806.jpeg
   - meetupcom:
-      meta_description: 'Thu, Dec 2, 5:00 PM: Připoj se k našemu večernímu workshopu, který bude probíhat online ve čtvrtek 2. prosince od 18 hodin. Probereme základy kódování a dozvíš se, co znamená pro-code a low-cod'
-      og_title: 'Online workshop: Základy programování | Meetup'
+      meta_description: 'Thu, Dec 2, 2021, 6:00 PM: Připoj se k našemu večernímu workshopu, který bude probíhat online ve čtvrtek 2. prosince od 18 hodin. Probereme základy kódování a dozvíš se, co znamená pro-code a low-code'
+      og_title: 'Online workshop: Základy programování'
       image: https://secure.meetupstatic.com/photos/event/3/1/e/9/600_500412777.jpeg
       url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/282264181/
       ical:
@@ -208,3 +205,28 @@ series:
         url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/282264181/
         dtstart: 2021-12-02 18:00:00+01:00
         dtend: 2021-12-02 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Dec 14, 2021, 6:00 PM: Jaké znalosti se ti vyplatí naučit už teď, abys ses vždy uplatnil/a na trhu práce? Jaké jsou výhody kurzů akreditovaných státem? Co je pro-code a jak fungují low-code platf'
+      og_title: 'Online informační schůzka: Jak nastartovat kariéru programátora od nuly?'
+      image: https://secure.meetupstatic.com/photos/event/9/3/2/5/600_500557669.jpeg
+      url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/282423179/
+      ical:
+        summary: 'Online informační schůzka: Jak nastartovat kariéru programátora od nuly?'
+        description: 'Become a software developer from 0
+
+          Tuesday, December 14 at 6:00 PM
+
+
+          Jaké znalosti se ti vyplatí naučit už teď, abys ses vždy uplatnil/a na trhu práce? Jaké jsou výhody kurzů akreditovaných státem? Co je pro-code a jak ...
+
+
+          https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/282423179/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_282423179@meetup.com
+        url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/282423179/
+        dtstart: 2021-12-14 18:00:00+01:00
+        dtend: 2021-12-14 19:30:00+01:00
