--- a/data/sources/medvedi.yaml
+++ b/data/sources/medvedi.yaml
@@ -1206,10 +1206,13 @@ series:
         dtstart: 2020-03-04 19:00:00+01:00
         dtend: 2020-03-04 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Jun 10, 2021, 7:00 PM: Ve čtvrtek 10.6. chystáme další živou Medvědárnu na Instagramu, tentokrát zaměřenou na JAVA lovers! :-)Těm, kteří se chtějí v Javě naučit sami více, předáme maximum toho, c'
-      og_title: Medvědárna
+      meta_description: 'Thu, Jun 10, 5:00 PM: Ve čtvrtek 10.6. chystáme další živou Medvědárnu na Instagramu, tentokrát zaměřenou na JAVA lovers! :-)
+
+
+        Těm, kteří se chtějí v Javě naučit sami více, předáme maximum toho,'
+      og_title: Medvědárna | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/c/5/6/600_496807254.jpeg
-      url: https://www.meetup.com/Medvědi/events/278701028/
+      url: https://www.meetup.com/Medv%C4%9Bdi/events/278701028/
       ical:
         summary: Medvědárna
         description: 'Medvědi
@@ -1231,10 +1234,13 @@ series:
         dtstart: 2021-06-10 19:00:00+02:00
         dtend: 2021-06-10 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Mar 4, 2021, 5:00 PM: Hola hola, Medvědárna volá!Pojďme si dát medvědí dýchánek on-line, chceme si s vámi zase povídat. Tentokrát o tom, jak se změnila podoba náboru IT kapacit a co na tom vývojá'
-      og_title: Medvědárna ONLINE
+      meta_description: 'Thu, Mar 4, 4:00 PM: Hola hola, Medvědárna volá!
+
+
+        Pojďme si dát medvědí dýchánek on-line, chceme si s vámi zase povídat. Tentokrát o tom, jak se změnila podoba náboru IT kapacit a co na tom výv'
+      og_title: Medvědárna ONLINE | Meetup
       image: https://secure.meetupstatic.com/photos/event/d/7/c/600_495003452.jpeg
-      url: https://www.meetup.com/Medvědi/events/276710007/
+      url: https://www.meetup.com/Medv%C4%9Bdi/events/276710007/
       ical:
         summary: Medvědárna ONLINE
         description: 'Medvědi
@@ -1256,10 +1262,15 @@ series:
         dtstart: 2021-03-04 17:00:00+01:00
         dtend: 2021-03-04 18:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, May 6, 2020, 5:00 PM: Rozhodli jsme se, že zkusíme udělat první ONLINE MedvědárnuPřenos zde: https://zoom.us/j/96688476433 (bude propojeno na FB i youtube)Big Brother v IT - měřit nebo neměřit, t'
-      og_title: Online Medvědárna
+      meta_description: 'Wed, May 6, 3:00 PM: Rozhodli jsme se, že zkusíme udělat první ONLINE Medvědárnu
+
+        Přenos zde: https://zoom.us/j/96688476433 (bude propojeno na FB i youtube)
+
+
+        Big Brother v IT - měřit nebo neměři'
+      og_title: Online Medvědárna | Meetup
       image: https://secure.meetupstatic.com/photos/event/d/e/4/2/600_490256898.jpeg
-      url: https://www.meetup.com/Medvědi/events/270291504/
+      url: https://www.meetup.com/Medv%C4%9Bdi/events/270291504/
       ical:
         summary: Online Medvědárna
         description: 'Medvědi
@@ -1281,10 +1292,13 @@ series:
         dtstart: 2020-05-06 17:00:00+02:00
         dtend: 2020-05-06 18:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Mar 4, 2020, 7:00 PM: OpenAPI - dobrý přítel nejen backend vývojářeNa další medvědárnu jsme pro přednášení ukecali Vlastíka Hájka :)) Vlastík je náš dlouholetý medvědí kamarád a na medvědárny cho'
-      og_title: Medvědárna
+      meta_description: 'Wed, Mar 4, 6:00 PM: OpenAPI - dobrý přítel nejen backend vývojáře
+
+
+        Na další medvědárnu jsme pro přednášení ukecali Vlastíka Hájka :)) Vlastík je náš dlouholetý medvědí kamarád a na medvědárny '
+      og_title: Medvědárna | Meetup
       image: https://secure.meetupstatic.com/photos/event/9/7/6/9/600_489338761.jpeg
-      url: https://www.meetup.com/Medvědi/events/269001570/
+      url: https://www.meetup.com/Medv%C4%9Bdi/events/269001570/
       ical:
         summary: Medvědárna
         description: 'Medvědi
