--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -170,7 +170,7 @@ series:
 
 
           https://www.meetup.com/TopMonks-Caffe/events/282160838/'
-        location: Loft N8 Restaurant and Shisha Lounge (Nekázanka 883/8, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        location: Online event
         geo:
           lat: 50.08
           lon: 14.43
