--- a/data/sources/mlmu-prague.yaml
+++ b/data/sources/mlmu-prague.yaml
@@ -136,15 +136,13 @@ series:
         dtstart: 2021-10-14 18:00:00+02:00
         dtend: 2021-10-14 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Dec 14, 5:00 PM: The talks will be live on YouTube.
+      meta_description: 'Tue, Dec 14, 5:00 PM: The talks will be live on YouTube. (Link will get displayed after you RSVP)
 
 
         Talk #1: How we use simple models to improve intent matching (Tomáš Vodrážka, Feedyou)
 
 
-        Abstract
-
-        Building a chatbot is not tricky anymor'
+        Abstrac'
       og_title: 'MLMU Online #17: Building Chatbots in Practice and Lessons Learned | Meetup'
       url: https://www.meetup.com/Prague-Machine-Learning/events/282546297/
       ical:
@@ -154,7 +152,7 @@ series:
           Tuesday, December 14 at 6:00 PM
 
 
-          The talks will be live on YouTube. Talk #1: How we use simple models to improve intent matching (Tomáš Vodrážka, Feedyou) AbstractBuilding a chatbot i...
+          The talks will be live on YouTube. (Link will get displayed after you RSVP) Talk #1: How we use simple models to improve intent matching (Tomáš Vodráž...
 
 
           https://www.meetup.com/Prague-Machine-Learning/events/282546297/'
