--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -205,3 +205,123 @@ series:
         url: https://www.meetup.com/czskppug/events/dgxdqsydcfbnb/
         dtstart: 2022-03-10 17:00:00+01:00
         dtend: 2022-03-10 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Jan 13, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      url: https://www.meetup.com/czskppug/events/sgvgrsydccbrb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, January 13 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/sgvgrsydccbrb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_sgvgrsydccbrb@meetup.com
+        url: https://www.meetup.com/czskppug/events/sgvgrsydccbrb/
+        dtstart: 2022-01-13 17:00:00+01:00
+        dtend: 2022-01-13 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Feb 10, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      url: https://www.meetup.com/czskppug/events/sgvgrsydcdbnb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, February 10 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/sgvgrsydcdbnb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_sgvgrsydcdbnb@meetup.com
+        url: https://www.meetup.com/czskppug/events/sgvgrsydcdbnb/
+        dtstart: 2022-02-10 17:00:00+01:00
+        dtend: 2022-02-10 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Mar 10, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      url: https://www.meetup.com/czskppug/events/sgvgrsydcfbnb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, March 10 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/sgvgrsydcfbnb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_sgvgrsydcfbnb@meetup.com
+        url: https://www.meetup.com/czskppug/events/sgvgrsydcfbnb/
+        dtstart: 2022-03-10 17:00:00+01:00
+        dtend: 2022-03-10 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Apr 14, 3:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      url: https://www.meetup.com/czskppug/events/sgvgrsydcgbsb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, April 14 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/sgvgrsydcgbsb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_sgvgrsydcgbsb@meetup.com
+        url: https://www.meetup.com/czskppug/events/sgvgrsydcgbsb/
+        dtstart: 2022-04-14 17:00:00+02:00
+        dtend: 2022-04-14 19:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Dec 9, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      url: https://www.meetup.com/czskppug/events/sgvgrsyccqbmb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, December 9 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/275722156/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_sgvgrsyccqbmb@meetup.com
+        url: https://www.meetup.com/czskppug/events/275722156/
+        dtstart: 2021-12-09 17:00:00+01:00
+        dtend: 2021-12-09 19:00:00+01:00
